--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 **/appsettings.Development.json
 **/bin
 **/obj
+/Ventas/.vs/Ventas/FileContentIndex/21db5055-fcbe-4af6-9b50-f9e4b08896c5.vsidx
+/Ventas/.vs/Ventas/FileContentIndex/336970a3-1775-46ee-a292-fb9ed4525d8a.vsidx
+/Ventas/.vs/Ventas/FileContentIndex/4edbadc1-0973-40d8-bf17-8bf41e1953f5.vsidx
+/Ventas/.vs/Ventas/FileContentIndex/723f96c2-194f-4482-a6f0-e86610a05d1f.vsidx
+/Ventas/.vs/Ventas/FileContentIndex/7951dfc9-8596-4f92-98ab-f00c1eefa6f0.vsidx
+/Ventas/.vs/Ventas/FileContentIndex/21db5055-fcbe-4af6-9b50-f9e4b08896c5.vsidx
+/Ventas/.vs/Ventas/FileContentIndex/4edbadc1-0973-40d8-bf17-8bf41e1953f5.vsidx
+/Ventas/.vs/Ventas/FileContentIndex/7951dfc9-8596-4f92-98ab-f00c1eefa6f0.vsidx
+/Ventas/.vs/Ventas/FileContentIndex/4edbadc1-0973-40d8-bf17-8bf41e1953f5.vsidx
