--- a/Ventas/Ventas.Infrastructure/Ventas.Infrastructure.csproj
+++ b/Ventas/Ventas.Infrastructure/Ventas.Infrastructure.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="Extensions\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Models\" />
+    <Folder Include="Repository\" />
+    <Folder Include="Context\" />
+  </ItemGroup>
+
 </Project>
