--- a/Ventas/Ventas.Infrastructure/Ventas.Infrastructure.csproj
+++ b/Ventas/Ventas.Infrastructure/Ventas.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Ventas.Application\Ventas.Application.csproj" />
     <ProjectReference Include="..\Ventas.Domain\Ventas.Domain.csproj" />
   </ItemGroup>
 
