Refactoring de Services y capa de aplicacion y creacion de la capa de IoC

--- a/Ventas/Ventas.Api/Ventas.Api.csproj
+++ b/Ventas/Ventas.Api/Ventas.Api.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ventas.Infrastructure\Ventas.Infrastructure.csproj" />
+    <ProjectReference Include="..\Ventas.IoC\Ventas.IoC.csproj" />
   </ItemGroup>
 
 </Project>
